# fmcg_pricing_macro_monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: data_pipeline.yml
.skills/: fix_pipeline.md  setup_cicd.md  update_portfolio_page.md
dags/: pricing_monitor_dag.py
data/: dashboard_fmcg_data.json
src/dashboard/: app.py  generate_portfolio_report.py
src/dashboard/pages/: cost_shock.py  inflation.py  overview.py  risk_scoring.py
src/extract/: commodities_api.py  ecb_api.py  insee_api.py  openfoodfacts_api.py
src/transform/: build_marts.py
tests/: test_pipeline.py
