[project]
name = "project-pricing-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "duckdb>=1.4.4",
    "fastparquet>=2025.12.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=1.2.0",
]
